manifests/cluster-addons/media/audiobookshelf/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-lan
  namespace: media
  labels:
    l2-announce: 'true'
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: audiobookshelf
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
