manifests/cluster-addons/media/audiobookshelf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-home
      namespace: tailscale

  hostnames:
    - podcasts.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: audiobookshelf
          port: 80
