manifests/cluster-addons/media/audiobookshelf/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: audiobookshelf
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
      toPorts:
        - ports:
            - port: '80'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toFQDNs:
        - matchName: 'www.podtrac.com'
        - matchName: 'pdst.fm'
        - matchName: 'claritaspod.com'
        - matchName: 'verifi.podscribe.com'
        - matchName: 'tracking.swap.fm'
        - matchPattern: '*.megaphone.fm'
        - matchName: 'itunes.apple.com'
        - matchName: 'megaphone.imgix.net'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
